public/css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");

* {
  margin: 0;
  padding: 0;
  font-family: "Comfortaa", cursive;
}

#loginDiv {
  display: block;
}

.l {
  font-size: 1.2em;
  font-weight: lighter;
  letter-spacing: 0.05em;
  background: linear-gradient(115deg, #34ada4 0%, #6dc495 100%);
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.input {
  width: 100%;
  margin-top: 0.5em;
  margin-bottom: 1em;
  border: 1px solid #34ada5c0;
  border-radius: 5px;
  font-size: 1em;
  padding: 0.5em 0.5em;
  color: #34ada4;
}

.input:focus {
  outline: none !important;
  border-color: #34ada4;
  box-shadow: 0 0 10px #34ada5c0;
}

.container {
  width: auto;
  height: 100vh;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
}

.content {
  height: auto;
  width: auto;
  display: inline-block;
  font-size: 2vh;
}

.content h1 {
  font-size: 10em;
  padding: 0.1em 0;
  background: linear-gradient(115deg, #34ada4 0%, #6dc495 100%);
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.signinbtn {
  padding: 0.5em;
  border-radius: 5px;
  margin-right: 1em;
  border: 1px solid #34ada5c0;
  color: white;
  background-color: #34ada5c0;
  font-weight: bold;
  font-family: "Comfortaa", cursive;
}

.signupbtn {
  padding: 0.5em;
  border-radius: 5px;
  border: 1px solid #34ada5c0;
  color: #34ada5c0;
  background-color: transparent;
  font-weight: bold;
  font-family: "Comfortaa", cursive;
}

.signinbtn,
.signupbtn {
  margin-top: 1em;
  font-size: 1em;
}

